# aviation-accident-analysis

./: .env  README.md  check_db.py  check_len.py  few_shot_data.csv  main.py  pyproject.toml  run.sh  settings.yaml  summarize_results.py
cache/community_reporting/: 02705489d0daad1f859be3d6fbdbffa8c5c3e751a572897e011a10da50606e68_v4  06095fb8ae70560e8fd9033559e502f72ce437b932d9b4dcc3a3494499d726a8_v4  070fe3560b9b594215ca52c895581b99924929c037bd020bf95f62e0d221b5df_v4  084dccdc8786caf28d2a81e8255a2e6979c2549c9933c5a9970fe08558202d41_v4  084e950b93f3f8230fe4dd38bc901caa9407071a82f39e8d836648adb78258f1_v4  095dcdc3f3f086d369d222b8db37d93d61393fc622855302b2cc8138946ca2e3_v4  09a7db12e7553c88934992227577dae912715ea05ac7285248b46081a5f182d7_v4  09c58cdab1d5cf0dcd98c1ebc86c274fd606fc1eea046d056d14b16a30235a63_v4  0e31daa8cb4733c51bdcb39974b28e01d8b79a3fd7860801bd189746e6cc8a96_v4  0fa6db7413d9962569db8eeb78eb8a12bbc06adc5f8075fca1ac8bec753a3050_v4  0fb0de3af353f9eee005f4cde55c299bcb56aded45eb276e64cb3e427b9c0fc1_v4  10783fa19cb55fbec57dc74d8f30e24cf72da6305b732f15a0d37c94275ab84c_v4  (+211 more)
data/: ground_truth.json
input/: report_0.txt  report_1.txt  report_2.txt  report_3.txt  report_4.txt  report_5.txt
output/: communities.parquet  community_reports.parquet  documents.parquet  entities.parquet  relationships.parquet  stats.json  text_units.parquet
prompts/: extract_entities.txt  extract_graph.txt  extract_relationships.txt
scripts/: run_automated_evaluation.py  test_llm_connection.py  test_prompt.py  test_single_report.py
src/: evaluate.py  export_to_neo4j.py  ingest.py
(+1470 files in other folders)
