[project]
name = "aviation-accident-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.46",
    "botocore>=1.43.46",
    "graphrag>=3.1.0",
    "neo4j>=6.2.0",
    "pandas>=2.3.3",
    "pypdf>=6.14.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
]
